# mdm-unlearning

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  NOTICE.md  README.ja.md  README.md  pyproject.toml
docs/: experiment_setup.ja.md  experiment_setup.md  untrac_results.ja.md  untrac_results.md
results/analysis/: corpus_specific_trigrams.json  knowledge_localization.json  neuron_suppression_results.json  trigram_prediction_results.json
results/attribution/compare/: ga_bookcorpus.json  ga_ccnewsv2.json  ga_gutenberg.json  ga_hackernews.json  ga_openwebtext.json  ga_pilecc.json  ga_stackexchange.json  ga_wikipedia.json  kl_bookcorpus.json  kl_ccnewsv2.json  kl_gutenberg.json  kl_hackernews.json  kl_openwebtext.json  kl_pilecc.json  kl_stackexchange.json  kl_wikipedia.json  npo_bookcorpus.json  npo_ccnewsv2.json  npo_gutenberg.json  npo_hackernews.json  npo_openwebtext.json  npo_pilecc.json  npo_stackexchange.json  npo_wikipedia.json  vdu_bookcorpus.json  vdu_ccnewsv2.json  vdu_gutenberg.json  vdu_hackernews.json  vdu_openwebtext.json  vdu_pilecc.json  vdu_stackexchange.json  vdu_wikipedia.json
results/attribution/e2d2/: kl_bookcorpus.json  kl_ccnewsv2.json  kl_gutenberg.json  kl_hackernews.json  kl_openwebtext.json  kl_pilecc.json  kl_stackexchange.json  kl_wikipedia.json
results/attribution/eu/: eu_bookcorpus.json  eu_ccnewsv2.json  eu_gutenberg.json  eu_hackernews.json  eu_openwebtext.json  eu_pilecc.json  eu_stackexchange.json  eu_wikipedia.json
results/attribution/fisher_meta/: fm_bookcorpus.json  fm_ccnewsv2.json  fm_gutenberg.json  fm_hackernews.json  fm_openwebtext.json  fm_pilecc.json  fm_stackexchange.json  fm_wikipedia.json
results/attribution/mdm_kl/: untrac_bookcorpus.json  untrac_ccnewsv2.json  untrac_gutenberg.json  untrac_hackernews.json  untrac_openwebtext.json  untrac_pilecc.json  untrac_stackexchange.json  untrac_wikipedia.json
results/ground_truth/: loo_attribution.json
results/reconstruction/ar/: recon_bookcorpus.json  recon_ccnewsv2.json  recon_gutenberg.json  recon_hackernews.json  recon_openwebtext.json  recon_pilecc.json  recon_stackexchange.json  recon_wikipedia.json
results/reconstruction/e2d2/: recon_bookcorpus.json  recon_ccnewsv2.json  recon_gutenberg.json  recon_hackernews.json  recon_openwebtext.json  recon_pilecc.json  recon_stackexchange.json  recon_wikipedia.json
scripts/: prepare_data.py
scripts/reconstruction/: run_ar.sh  run_e2d2.sh  run_mdm_eu.sh  run_mdm_fm.sh  run_mdm_kl.sh
scripts/train/: run_loo.sh
scripts/untrac/: run_ar.sh  run_compare.sh  run_e2d2.sh  run_eu.sh  run_fisher_meta.sh
src/mdm_unlearning/: __init__.py
(+64 files in other folders)
